--- a/css/about.css
+++ b/css/about.css
@@ -1,7 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Rampart+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap');
 body {
 	margin: 0;
 	overflow: hidden;
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+}
+body::-webkit-scrollbar {
+	display:none;
 }
 #stick {
 	position: absolute;
@@ -104,4 +111,60 @@ body {
 	z-index: 10;
 	font-size: 6vw;
 	font-family: 'Rampart One', cursive;
+}
+#about {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	width: 100vw;
+	top: 100vh;
+	z-index: 10;
+	font-family: 'Noto Sans JP', sans-serif;
+}
+#at {
+	color: #fff;
+	font-size: 5vw;
+	height: 10%;
+	font-family: 'Rampart One', cursive;
+	background-color: black;
+}
+.sentence {
+	color: #fff;
+	font-size: 3.09vw;
+	font-family: 'Noto Sans JP', sans-serif;
+	background-color: black;
+	margin-bottom: 0;
+}
+#check {
+	position: absolute;
+	top: calc(100% + 1px);
+	width: 1px;
+	height: 1px;
+}
+#check-top {
+	position: absolute;
+	top: 0;
+	width: 1px;
+	height: 1px;
+}
+#bottom {
+	font-family: 'Orbitron', sans-serif;
+	font-size: 30px;
+	position: absolute;
+	top: 56vh;
+	left: calc(50vw - 25px);
+	padding: 5px 10px;
+	cursor: pointer;
+	z-index: 9;
+}
+#opacity {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #fff;
+	opacity: 0;
 }
