--- a/css/about.css
+++ b/css/about.css
@@ -140,13 +140,13 @@ body::-webkit-scrollbar {
 }
 #check {
 	position: absolute;
-	top: calc(100% + 1px);
+	top: calc(100% + 3px);
 	width: 1px;
 	height: 3px;
 }
 #check-top {
 	position: absolute;
-	top: 0;
+	top: -3px;
 	width: 1px;
 	height: 3px;
 }
