--- a/css/about.css
+++ b/css/about.css
@@ -65,9 +65,6 @@ body::-webkit-scrollbar {
 	scrollbar-width: none;
 }
 #block {
-	position: absolute;
-	top: 30%;
-	left: 20%;
 	width: 60%;
 	height: 20%;
 	background-color: black;
@@ -99,14 +96,16 @@ body::-webkit-scrollbar {
 		left: 20%;
 	}
 }
-#title {
-	color: #fff;
-	position: absolute;
+.title {
+	position: fixed;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	top: 30%;
 	left: 20%;
+}
+#title {
+	color: #fff;
 	width: 60%;
 	height: 20%;
 	z-index: 10;
@@ -161,7 +160,7 @@ body::-webkit-scrollbar {
 	z-index: 9;
 }
 #opacity {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
